--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800%7CPoppins:200,300,400,500,600,700,800,900"
     rel="stylesheet" />
 
-  <title>Zmovo</title>
+  <title>zmovie</title>
 </head>
 
 <body>
